--- a/views/partials/headMedecin.ejs
+++ b/views/partials/headMedecin.ejs
@@ -11,6 +11,8 @@
 <link href="../main.css" rel="stylesheet">
 <link href="../style.css" rel="stylesheet">
 <script type="text/javascript" src="../assets/scripts/jquery.min.js"></script>
+<script type="text/javascript" src="../assets/scripts/dateFormat.js"></script>
+
 <script>
     function calculeYear(date) {
         return new Date().getFullYear() - new Date(date).getFullYear();
