--- a/views/suivieRdv.ejs
+++ b/views/suivieRdv.ejs
@@ -29,7 +29,7 @@
                                                         <div class="col-sm-10">
                                                             <select name="pathologie" id="exampleSelect" class="form-control">
                                                             <% info.pathologie.forEach(function(value){ %>
-                                                            <option value="<%= value._id %>"><%= value.name %></option>
+                                                            <option value="<%= value.name %>"><%= value.name %></option>
                                                             <% }); %>
                                                             </select>
                                                         </div>
