--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -14,6 +14,7 @@
 <link href="../main.css" rel="stylesheet">
 <link href="../style.css" rel="stylesheet">
 <script type="text/javascript" src="../assets/scripts/jquery.min.js"></script>
+<script type="text/javascript" src="../assets/scripts/dateFormat.js"></script>
 </head>
 <body>
     <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
@@ -77,7 +78,7 @@
                                         </a>
                                         <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
                                             
-                                            <h6 tabindex="-1" class="dropdown-header">Core Irie Wilfried</h6>
+                                            <h6 tabindex="-1" class="dropdown-header"><%= user.name %></h6>
                                             <div tabindex="-1" class="dropdown-divider"></div>
                                             <a type="button" href="/admin/logout" tabindex="0" class="dropdown-item">Deconnexion</a>
                                         </div>
@@ -168,7 +169,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="/admin/listrendezvous">
+                                            <a href="/admin/listRendezVous">
                                                 <i class="metismenu-icon">
                                                 </i>Liste Rendez-vous
                                             </a>
