--- a/views/saveMedecin.ejs
+++ b/views/saveMedecin.ejs
@@ -28,12 +28,12 @@
                             </li>
                             <li class="nav-item">
                                 <a role="tab" class="nav-link" id="tab-1" data-toggle="tab" href="#tab-content-1">
-                                    <span>Pathologie</span>
+                                    <span>Specialité</span>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a role="tab" class="nav-link" id="tab-2" data-toggle="tab" href="#tab-content-2">
-                                    <span>Specialité</span>
+                                    <span>Pathologie</span>
                                 </a>
                             </li>
                         </ul>
@@ -95,7 +95,7 @@
                                                     <% info.allMedecin.forEach(function(value){ %>
                                                         <tr>
                                                             <td><img class="img-profil-medecin" src="../assets/images/avatars/profils/<%= value.images %>" alt="<%= value.recovery %>"></td>
-                                                            <td><%= value.name %></td>
+                                                            <td><%= value.name %><br><%= value.email %></td>
                                                             <td><%= value.numero %></td>
                                                             <td><%= value.speciality.name %></td>
                                                             <td>
@@ -106,7 +106,7 @@
                                                             <% } %>
                                                             
                                                             </td>
-                                                            <td> <a class="btn btn-outline-dark btn-sm" href="/admin/viewMedecin?id=<%= value._id %>">Voir</a> </td>
+                                                            <td><%= value.address %></td>
                                                     </tr>
                                                     <% }); %>
                                                     </tbody>
@@ -120,7 +120,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="main-card mb-3 card">
-                                            <div class="card-body"><h5 class="card-title">Enregistrement d'une Pathologie</h5>
+                                            <div class="card-body"><h5 class="card-title">Enregistrement d'une Specialité</h5>
                                                 <form class="" method="post" action="/admin/createSpeciality">
                                                             <div class="position-relative form-group"><label for="nameSpeciality" class="">Nom Specialité</label><input name="name" id="nameSpeciality" placeholder="Généraliste, Dentiste, Genecologue, etc..." type="text" class="form-control" required></div>
                                                             
