--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -147,7 +147,7 @@
                                         <li>
                                             <a href="/admin/saveMedecin">
                                                 <i class="metismenu-icon"></i>
-                                                Enregistrement Medecin
+                                                 Medecin
                                             </a>
                                         </li>
                                         
