--- a/views/saveMedecin.ejs
+++ b/views/saveMedecin.ejs
@@ -42,44 +42,48 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="main-card mb-3 card">
-                                            <div class="card-body"><h5 class="card-title">Enregistrement d'un medecin</h5>
-                                                <form class="" method="post" action="/admin/createMedecin" enctype="multipart/form-data">
-                                                    <div class="position-relative form-group"><label for="exampleEmail" class="">Email</label><input name="email" id="exampleEmail" placeholder="Email du medecin" type="email" class="form-control" required></div>
-                                                    <div class="position-relative form-group"><label for="name" class="">Nom Complet</label><input name="name" id="name" placeholder="Nom complet du medecin" type="text" class="form-control" required></div>
-                                                    <div class="position-relative form-group"><label for="numero" class="">Numero</label><input name="numero" id="numero" placeholder="Numero du medecin" type="number" class="form-control" required></div>
-                                                    <div class="position-relative form-group"><label for="examplePassword" class="">Mot de passe</label><input name="password" id="examplePassword" placeholder="password placeholder" type="password" required class="form-control"></div>
-                                                    <div class="position-relative form-group"><label for="exampleSelect" class="">Specialité</label><select name="speciality" id="exampleSelect" class="form-control">
-                                                        <% info.allSpeciality.forEach(function(value){ %>
-                                                        <option value="<%= value._id %>"><%= value.name %></option>
-                                                        <% }); %>
-                                                    </select></div>
-
-                                                    <div class="position-relative form-group"><label for="address" class="">Commune d'exercice</label><select name="address" id="address" class="form-control">
-                                                        
-                                                        <option value="Abobo">Abobo</option>
-                                                        <option value="Adjamé">Adjamé</option>
-                                                        <option value="Atécoubé">Atécoubé</option>
-                                                        <option value="Cocody">Cocody</option>
-                                                        <option value="Koumassi">Koumassi</option>
-                                                        <option value="Marcory">Marcory</option>
-                                                        <option value="Plateau">Plateau</option>
-                                                        <option value="Port-Bouet">Port-Bouet</option>
-                                                        <option value="Treichville">Treichville</option>
-                                                        <option value="Yopougon">Yopougon</option>
-                                                        
-                                                    </select></div>
-                                                    
-                                                    <div class="position-relative form-group"><label for="exampleFile" class="">Image de profil</label><input name="images" id="exampleFile" type="file" class="form-control-file">
-                                                        
-                                                    </div>
-                                                    <button class="mt-1 btn btn-primary">ENREGISTRER</button>
-                                                </form>
+                                            <div class="card-body"><h5 class="card-title">Personnel en attente d'aprobation</h5>
+                                                <table class="mb-0 table table-hover table-striped">
+                                                    <thead>
+                                                    <tr>
+                                                        <th>Profil</th>
+                                                        <th>Nom medecin</th>
+                                                        <th>Matricule</th>
+                                                        <th>Numero</th>
+                                                        <th>Specialité</th>
+                                                        <th>Type</th>
+                                                        <th>Action</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    <% info.allMedecinInWait.forEach(function(value){ %>
+                                                        <tr>
+                                                            <td><img class="img-profil-medecin" src="../assets/images/avatars/profils/<%= value.images %>" alt="<%= value.recovery %>"></td>
+                                                            <td><%= value.name %><br><%= value.email %></td>
+                                                            <td><%= value.matricule %></td>
+                                                            <td><%= value.numero %></td>
+                                                            <td><%= value.speciality.name %></td>
+                                                            <td>
+                                                            
+                                                            <span class="badge badge-info"><%= value.typeMedecin %></span>
+                                                            
+                                                            
+                                                            </td>
+                                                            <td>
+                                                            <button type="button" class="activateCompte btn btn-dark btn-sm" data-ref='<%= value._id %>'>Activer</button>
+                                                            <br>
+                                                            <button type="button" class="deleteCompte btn btn-danger btn-sm" data-ref='<%= value._id %>'>Supprimer</button>
+                                                            </td>
+                                                    </tr>
+                                                    <% }); %>
+                                                    </tbody>
+                                                </table>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-12">
                                         <div class="main-card mb-3 card">
-                                            <div class="card-body"><h5 class="card-title">Liste des medecins</h5>
+                                            <div class="card-body"><h5 class="card-title">Liste des medecins Temps plein</h5>
                                                 <table class="mb-0 table table-hover table-striped">
                                                     <thead>
                                                     <tr>
@@ -92,7 +96,81 @@
                                                     </tr>
                                                     </thead>
                                                     <tbody>
-                                                    <% info.allMedecin.forEach(function(value){ %>
+                                                    <% info.allMedecinFull.forEach(function(value){ %>
+                                                        <tr>
+                                                            <td><img class="img-profil-medecin" src="../assets/images/avatars/profils/<%= value.images %>" alt="<%= value.recovery %>"></td>
+                                                            <td><%= value.name %><br><%= value.email %></td>
+                                                            <td><%= value.numero %></td>
+                                                            <td><%= value.speciality.name %></td>
+                                                            <td>
+                                                            <% if (value.isActivate) { %>
+                                                            <span class="badge badge-success">En Activité</span>
+                                                            <% }  else { %>
+                                                            <span class="badge badge-danger">Attente d'horaire</span>
+                                                            <% } %>
+                                                            
+                                                            </td>
+                                                            <td><%= value.address %></td>
+                                                    </tr>
+                                                    <% }); %>
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="main-card mb-3 card">
+                                            <div class="card-body"><h5 class="card-title">Liste des medecins Temps partiel</h5>
+                                                <table class="mb-0 table table-hover table-striped">
+                                                    <thead>
+                                                    <tr>
+                                                        <th>Profil</th>
+                                                        <th>Nom medecin</th>
+                                                        <th>Numero</th>
+                                                        <th>Specialité</th>
+                                                        <th>En Activité</th>
+                                                        <th>Action</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    <% info.allMedecinPart.forEach(function(value){ %>
+                                                        <tr>
+                                                            <td><img class="img-profil-medecin" src="../assets/images/avatars/profils/<%= value.images %>" alt="<%= value.recovery %>"></td>
+                                                            <td><%= value.name %><br><%= value.email %></td>
+                                                            <td><%= value.numero %></td>
+                                                            <td><%= value.speciality.name %></td>
+                                                            <td>
+                                                            <% if (value.isActivate) { %>
+                                                            <span class="badge badge-success">En Activité</span>
+                                                            <% }  else { %>
+                                                            <span class="badge badge-danger">Attente d'horaire</span>
+                                                            <% } %>
+                                                            
+                                                            </td>
+                                                            <td><%= value.address %></td>
+                                                    </tr>
+                                                    <% }); %>
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="main-card mb-3 card">
+                                            <div class="card-body"><h5 class="card-title">Liste des Infirmiers</h5>
+                                                <table class="mb-0 table table-hover table-striped">
+                                                    <thead>
+                                                    <tr>
+                                                        <th>Profil</th>
+                                                        <th>Nom Infirmier</th>
+                                                        <th>Numero</th>
+                                                        <th>Specialité</th>
+                                                        <th>En Activité</th>
+                                                        <th>Action</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    <% info.allInfirmier.forEach(function(value){ %>
                                                         <tr>
                                                             <td><img class="img-profil-medecin" src="../assets/images/avatars/profils/<%= value.images %>" alt="<%= value.recovery %>"></td>
                                                             <td><%= value.name %><br><%= value.email %></td>
