--- a/views/listClient.ejs
+++ b/views/listClient.ejs
@@ -21,7 +21,7 @@
                                                     <tbody>
                                                     <% info.allClient.forEach(function(value){ %>
                                                         <tr>
-                                                            <td><img class="img-profil-medecin" src="../assets/images/<%= value.images %>" alt=""></td>
+                                                            <td><img class="img-profil-medecin" src="../assets/images/avatars/profilClients/<%= value.images %>" alt=""></td>
                                                             <td><%= value.name %></td>
                                                             <td><%= value.numero %></td>
                                                             <td><%= value.address %></td>
