--- a/views/loginMedecin.ejs
+++ b/views/loginMedecin.ejs
@@ -320,17 +320,13 @@ textarea {
           <form action="/medecin/login" method="post">
           
             <div class="field-wrap">
-            <label>
-              Email<span class="req">*</span>
-            </label>
-            <input type="email" name="email" required autocomplete="off"/>
+           
+            <input type="email" name="email" required autocomplete="off" placeholder='Email'/>
           </div>
           
           <div class="field-wrap">
-            <label>
-              Mot de passe<span class="req">*</span>
-            </label>
-            <input type="password" name="password" required autocomplete="off"/>
+            
+            <input type="password" name="password" required autocomplete="off" placeholder='Mot de passe'/>
           </div>
           
           <p class="forgot"><a href="#">Mot de passe oublié ?</a></p>
