--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,9 @@
 
 <!-- Resources -->
 
+<script type="text/javascript" src="../assets/scripts/datatables.min.js"></script>
 <script type="text/javascript" src="../assets/scripts/jquery.notify.js"></script>
+<script type="text/javascript" src="../assets/scripts/previewImage.js"></script>
 <script type="text/javascript" src="../assets/scripts/main.js"></script>
 <script type="text/javascript" src="../assets/scripts/other.js"></script>
 
