--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,10 +11,17 @@
     <meta name="msapplication-tap-highlight" content="no"> 
     
 
+<link href="../datatables.min.css" rel="stylesheet">
 <link href="../main.css" rel="stylesheet">
 <link href="../style.css" rel="stylesheet">
 <script type="text/javascript" src="../assets/scripts/jquery.min.js"></script>
-<script type="text/javascript" src="../assets/scripts/dateFormat.js"></script>
+<script>
+    function formatDate(date) {
+    const moment = new Date(date);
+    const dateStringLocal =  moment.toLocaleDateString() + ' à ' + moment.toLocaleTimeString();
+    document.write(dateStringLocal);
+}
+</script>
 </head>
 <body>
     <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
